<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/mensajes"
            android:title="@string/menu_mensajes" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/fav"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
